--- a/Project/css/Basic_Style.css
+++ b/Project/css/Basic_Style.css
@@ -20,7 +20,7 @@ h1 {
 SELECT ALL SQUARES IN THE ARRAY
 -------------------------------------------*/
 .container .squares:nth-child(-n+4) {
-    background-image: url("./images/Icons/Icon0.png");
+    background-image: url("../images/Icons/Icon0.png");
     color: #fff;
     float: left;
     width: 100px;
@@ -29,6 +29,7 @@ SELECT ALL SQUARES IN THE ARRAY
     border: 1px solid black;     
     border-radius: 254;
     cursor: pointer;
+    transition: transform .5s ease-in-out;
 } 
 /*-------------------------------------------
 SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
@@ -55,4 +56,40 @@ INDIVIDUALLY SELECT A SQUARE IN THE ARRAY
 }
 .squares:nth-child(4) {
     background: #00b200
+}
+/*-------------------------------------------
+    HOVER EFFECTS
+-------------------------------------------*/
+.container .squares:nth-child(-n+4):hover{
+    background-image:url("../images/Icons/Icon1.png");
+    transform: scale(.5);
+    animation-name: race;
+    animation-duration:2.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(2.5,.2,.3,2);
+}
+.squares:nth-child(1):hover  {
+    background: #13b4ff;
+}
+.squares:nth-child(2):hover {
+    background:#d861af;
+}
+.squares:nth-child(3):hover {
+    background: #81205f;
+}
+.squares:nth-child(4):hover {
+    background: #77b800;
+}
+ /*-------------------------------------------
+    ANIMATION EFFECT
+-------------------------------------------*/
+@keyframes race{
+    0%, 100% {
+        transform: translateY(0px);
+        background-image:url("../images/Icons/Icon1.png")
+    }
+
+    50% {
+        transform:translateY(330px);
+    }
 }
